Implementation of usage of indexes in bothE function.